remove as any synchronization as possible by using stack copies.